@@ -325,7 +325,6 @@ JGLOBAL_MULTI_LEVEL="Multi Level"
 JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. The ordering can be changed after this item is saved."
 JGLOBAL_NEWITEMSFIRST_DESC="New items default to the first position. The ordering can be changed after this item is saved."
 JGLOBAL_NO_ORDER="No Order"
-JGLOBAL_NO_ROBOTS_TAG="Don't display robots tag."
 JGLOBAL_NOINDEX_FOLLOW="No index, follow"
 JGLOBAL_NOINDEX_NOFOLLOW="No index, no follow"
 JGLOBAL_NUM_COLUMNS_DESC="The number of columns in which to show Intro Articles. Normally 1, 2, or 3."
